packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__transform_text__multiple_conditional.snap
---
source: tests/vapor/transform_text.rs
expression: code
---
import { createNodes as _createNodes } from "vue-jsx-vapor";
import { createIf as _createIf, template as _template } from "vue";
const t0 = _template(" ");
const t1 = _template("<span></span>");
(() => {
  const n0 = _createIf(() => ok, () => {
    const n2 = _createNodes(() => ok);
    return n2;
  }, () => {
    const n4 = _createNodes(() => fail);
    return n4;
  });
  const n5 = t0();
  const n6 = _createIf(() => foo, () => {
    const n8 = _createNodes(() => foo);
    return n8;
  }, () => {
    const n10 = t1();
    return n10;
  });
  return [
    n0,
    n5,
    n6
  ];
})();
