packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__transform_text__on_consecutive_text.snap
---
source: tests/vapor/transform_text.rs
expression: code
---
import { createNodes as _createNodes } from "/vue-jsx-vapor/vapor";
(() => {
  const n0 = _createNodes("hello world");
  return n0;
})();
