packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__transform_text__static_template.snap
---
source: tests/vapor/transform_text.rs
expression: code
---
import { template as _template } from "vue";
const t0 = _template("<div><div>hello</div><input><span></span></div>", true);
(() => {
  const n0 = t0();
  return n0;
})();
