packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__transform_text__text_like.snap
---
source: tests/vapor/transform_text.rs
expression: code
---
import { template as _template } from "vue";
const t0 = _template("<div>2foo111</div>", true);
(() => {
  const n0 = t0();
  return n0;
})();
